test/ll_parser_definitions_test.test
EXPRESSION: SHORT_OBJ: line 11:
parser define bracket "["
^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: too few defined names in line 11:
parser define bracket "["
^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 12:
parser define bracket "[" ...
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line 12 expected quoted string name after :
parser define bracket "[" ...
                          ^^^
EXPRESSION: SHORT_OBJ: line 13:
parser define selector this is a name ++
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: extraneous stuff after selector name in line 13:
parser define selector this is a name ++
                                      ^^
EXPRESSION: SHORT_OBJ: line 14:
parser define selector text
^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 15:
parser define selector operator
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 16:
parser print selectors
^^^^^^^^^^^^^^^^^^^^^^
parser print selectors:
        [ text, operator ]
EXPRESSION: SHORT_OBJ: line 17:
parser define selector text
^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 18:
parser define selector operator 2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 19:
parser print selectors
^^^^^^^^^^^^^^^^^^^^^^
parser print selectors:
        [ text, operator, operator 2 ]
